Tweak Web UI and clean up implant directory

--- a/src/server/httpui/static/css/site.css
+++ b/src/server/httpui/static/css/site.css
@@ -1,7 +1,9 @@
 body {
-    font-family: Arial, monospace;
     max-width: 768px;
+    background-color: #f7f7f7;
     margin: auto;
+    color: #333;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 h1 {
@@ -9,13 +11,116 @@ h1 {
 }
 
 .responsive {
-    width: 100%;
-    max-width: 500px;
-    height: auto;
+    width: auto;
+    max-width: 768px;
+    height: 240px;
 }
 
-table {
-    width: 100%;
-    border: 1px solid black;
-    border-collapse: collapse;
+.logo {
+    padding-top: 2%;
+    padding-bottom: 5%;
 }
+
+.lead {
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 30px;
+    margin-bottom: 20px;
+    transition: font-size .5s;
+}
+
+.main-view {
+    background: rgb(252, 252, 252);
+    padding-top: 5px;
+}
+
+/*
+---- TABLE ----
+*/
+table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  width: 100%;
+  z-index: 1;
+}
+table tr {
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+table th, table td {
+  padding: 10px;
+  text-align: center;
+}
+table th {
+  font-size: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 600px) {
+  table {
+    border: 0;
+  }
+  table thead {
+    display: none;
+  }
+  table tr {
+    border-bottom: 2px solid #ddd;
+    display: block;
+    margin-bottom: 10px;
+  }
+  table td {
+    border-bottom: 1px dotted #ccc;
+    display: block;
+    font-size: 13px;
+    text-align: right;
+  }
+  table td:last-child {
+    border-bottom: 0;
+  }
+  table td:before {
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
